# seqan

apps/gustaf/: msplazer_out.h
apps/mason2/: external_split_merge.cpp  genomic_variants.h  mason_simulator.cpp  mason_variator.cpp  vcf_materialization.cpp
apps/ngs_roi/: bam2roi.cpp  roi_feature_projection.cpp  roi_plot_thumbnails.cpp
apps/pair_align/: pair_align.cpp
apps/pair_align/lib/: pair_align_global.cpp  pair_align_lib.h
apps/rabema/: io_gsi.h  prepare_sam.cpp  rabema_build_gold_standard.cpp  rabema_evaluate.cpp
apps/sam2matrix/: sam2matrix.cpp
apps/samcat/: bamsort.cpp  samcat.cpp
apps/snp_store/: snp_store.h
core/include/seqan/: index.h
core/tests/gappedIndex/: CMakeLists.txt  test_gappedIndex.cpp  test_gappedIndex.h  test_gappedIndex_construction.h  test_gappedIndex_find.h  test_gappedIndex_stree.h
core/tests/generalized_index_sa/: test_generalized_index_sa.h
demos/: bam_library_size.cpp  bam_print_alignments.cpp  bamutil.cpp  benchmark_stream.cpp  benchmark_stream_write.cpp  parse_lm_stellar.cpp  sample_seqs.cpp  soft_to_hard_masking.cpp
demos/align/: compute_alignment_stats.cpp
demos/basic/: enable_if.cpp  metaprogramming_control.cpp  metaprogramming_logic.cpp  metaprogramming_math.cpp  metaprogramming_switch.cpp
demos/misc/: get_terminal_size.cpp
demos/sequence/: segment.cpp  string.cpp
demos/tutorial/bam_io/: example2.cpp  example3.cpp  example7.cpp  solution4.cpp  solution7.cpp
demos/tutorial/bed_io/: solution2.cpp
demos/tutorial/generic_programming/: template_subclassing.cpp
demos/tutorial/gff_io/: solution2.cpp
demos/tutorial/indexed_fasta_io/: solution1.cpp
demos/tutorial/vcf_io/: example1.cpp  solution2.cpp
dox/: dox_only.sh
include/seqan/: bam_io.h  graph_algorithms.h  graph_align.h  graph_types.h  index.h  seq_io.h  sequence.h  simple_intervals_io.h  store.h  stream.h  vcf_io.h
include/seqan/align/: gap_anchor.h  matrix_base.h
include/seqan/arg_parse/: tool_doc.h
include/seqan/bam_io/: bam_alignment_record_util.h  bam_file.h  bam_index_bai.h  read_bam.h  read_sam.h
include/seqan/basic/: allocator_chunkpool.h  allocator_multipool.h  alphabet_adapt_builtins.h  alphabet_profile.h  alphabet_residue.h  array_construct_destruct.h  basic_stream.h  concept_checking.h  iterator_adapt_std.h  math_log_space_value.h  metaprogramming_enable_if.h  profiling.h  test_system.h
include/seqan/bed_io/: bed_file.h
include/seqan/consensus/: consensus_base.h  consensus_library.h
include/seqan/file/: file_base.h  file_page.h  string_external.h
include/seqan/find/: find_abndm.h  find_ahocorasick.h  find_bndm.h  find_multiple_shiftand.h  find_myers_ukkonen.h  find_pex.h  find_shiftand.h  find_shiftor.h  find_simple.h  find_wild_shiftand.h
include/seqan/gff_io/: gff_file.h
include/seqan/index/: find_swift.h  (+24 more)
sandbox/meiers/apps/benchmarkModCyclicShapeIterator/: CMakeLists.txt  INFO  benchmarkModCyclicShapeIterator.cpp
tests/arg_parse/: test_extensions.h
tests/bam_io/: test_bam_file.h  test_bam_index.h  test_read_bam.h  test_read_sam.h
tests/basic/: test_basic_alphabet.h  test_basic_iterator.h
tests/consensus/: test_consensus_realign.h
tests/find/: test_find.cpp
tests/graph_algorithms/: test_graph_algorithms.h
tests/index/: test_index_creation.h  test_index_helpers.h  test_stree_iterators.h
tests/map/: test_map_map.h
tests/misc/: test_misc.cpp  test_misc_accumulators.h  test_misc_bit_twiddling.h  test_misc_interval_tree.h
tests/pipe/: test_pipe.cpp  test_pipe.h
tests/sequence/: test_sequence_std_adaptions.h  test_string.h
tests/store/: test_store_io.h
tests/vcf_io/: test_vcf_io.h
(+99 files in other folders)
